# dspam-fork

./: .gitignore
fork/: CMakeLists.txt
fork/src/: CMakeLists.txt  base64.cpp  buffer.cpp  decode.cpp  diction.cpp  heap.cpp  libdspam.cpp  libdspam_objects.h  list.cpp  nodetree.cpp  pref.cpp  read_config.cpp  storage_driver.h  tokenizer.cpp  util.cpp  util.h
